# scopecall

./: .dockerignore  .gitignore  .gitmessage  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SDK_DESIGN.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-images.yml  publish-python.yml
assets/brand/: README.md  generate_logo.py
docs/: installation.md  roadmap.md  self-hosting.md
docs/archive/: ARCHITECTURE-v0.1-draft.md
infra/: .env.example  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml
infra/dev-seed/: postgres-init.sql  seed.sql
infra/self-hosted/: postgres-init.sql
infra/self-hosted/clickhouse-users/: allow_default.xml
schemas/api/: v1.yaml
schemas/clickhouse/: 001_initial.sql  002_trace_id_skip_index.sql  003_prompt_version.sql  004_span_kind.sql  005_kind_aware_rollup.sql  006_customer_id.sql  007_retry_and_test_flag.sql  008_cost_metadata.sql  009_fix_rollup_additive_columns.sql
schemas/postgres/migrations/: 001_initial.sql  002_alerts.sql  003_saved_views.sql  004_api_keys_metadata.sql  005_api_key_scopes.sql  006_api_key_revoked_at.sql
schemas/postgres/queries/: api_keys.sql  auth.sql
schemas/redaction/: patterns.yaml
scripts/: backfill-llm-metrics-hourly.sh  bootstrap-for-review.sh  e2e-sdk-test.mjs  e2e-test.sh  reconcile-llm-metrics-hourly.sh  run-ch-migrations.sh  seed-demo-data.py
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/examples/fastapi/: README.md  app.py
sdks/python/scopecall/: __init__.py  _config.py  _context.py  _exporter.py  _pricing.py  _redactor.py  _sdk.py  _version.py
sdks/python/scopecall/instrumentation/: __init__.py  _anthropic.py  _common.py  _openai.py
sdks/python/scopecall/wire/: __init__.py  _event.py
sdks/python/tests/: conftest.py  test_anthropic_instrumentation.py  test_config.py  test_context.py  test_event.py  test_openai_instrumentation.py  test_redaction.py  test_streaming_context.py  test_workflow_emission.py
sdks/typescript/: .eslintrc.cjs  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/typescript/src/: _redactor.ts  config.ts  context.ts  exporter.ts  index.ts  register.ts
sdks/typescript/src/instrumentation/: anthropic.ts  openai.ts  vercel-ai.ts
sdks/typescript/src/pricing/: pricing.json  resolve.ts
sdks/typescript/src/transport/: console.ts  file.ts  http.ts  types.ts
sdks/typescript/src/wire/: llm-event.ts
sdks/typescript/test/: anthropic.test.ts  exporter.test.ts  init.test.ts  integration.test.ts  openai-streaming.test.ts  pricing.test.ts  prompt-version.test.ts  redactor.test.ts  trace.test.ts  transport.test.ts  vercel-ai.test.ts
services-dashboard/: .dockerignore  .env.local.example  .eslintrc.json  Dockerfile  Makefile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
services-dashboard/scripts/: check-api-types.sh
services-dashboard/src/: auth.ts  middleware.ts
services-dashboard/src/app/: globals.css  layout.tsx
services-dashboard/src/app/auth/: layout.tsx
services-dashboard/src/app/dashboard/: layout.tsx  page.tsx  providers.tsx
services-dashboard/src/app/setup/: actions.ts  page.tsx
services-dashboard/src/components/: theme-provider.tsx
services-dashboard/src/components/flow/: call-node.tsx  flow-node.tsx
services-dashboard/src/components/layout/: command-palette.tsx  saved-views-menu.tsx  sidebar.tsx  top-header.tsx
services-dashboard/src/components/metrics/: cost-chart.tsx  latency-chart.tsx  status-errors-chart.tsx  top-movers.tsx  volume-chart.tsx
services-dashboard/src/components/overview/: cost-confidence-card.tsx  first-run.tsx  insights-strip.tsx  regressions-panel.tsx  sdk-health-card.tsx  stat-cards.tsx  waste-inbox.tsx  workflow-treemap.tsx
services-dashboard/src/components/shared/: copy-button.tsx  date-range-picker.tsx  empty-state.tsx  error-state.tsx  loading-state.tsx  relative-time.tsx  status-badge.tsx
services-dashboard/src/components/traces/: compare-tray.tsx  trace-gantt.tsx
services-dashboard/src/components/ui/: button.tsx
services-dashboard/src/hooks/: use-api-error.ts  use-compare-set.tsx  use-document-title.ts
services-dashboard/src/lib/: api-client.ts  api-types.ts  design.ts  format.ts  org-context.ts  pricing.ts
services-dashboard/src/lib/auth/: authjs.ts  index.ts  supabase-server.ts  supabase.ts  types.ts
services-dashboard/src/lib/queries/: use-alerts.ts  use-api-keys.ts  use-breakdown.ts  use-cost-confidence.ts  use-customer-profitability.ts  use-errors-by-status.ts  use-graph.ts  use-metrics.ts  use-overview.ts  (+11 more)
services-go/: Makefile  go.work  go.work.sum
services-go/api/: Dockerfile  Makefile  go.mod  go.sum  oapi-codegen.yaml  sqlc.yaml
services-go/common/: go.mod  go.sum
services-go/common/auth/: denylist.go  jwks.go  jwt.go
services-go/common/cache/: redis.go
services-go/common/clickhouse/: client.go
services-go/tools/dlq-drain/: go.mod  main.go
services-rust/: .dockerignore  Cargo.toml
services-rust/common/: Cargo.toml
services-rust/common/src/: config.rs  errors.rs  event.rs  key.rs  lib.rs
services-rust/ingest/: Cargo.toml  Dockerfile
services-rust/ingest/src/: auth.rs  main.rs  producer.rs
services-rust/ingest/src/routes/: health.rs  ingest.rs
services-rust/processor/: Cargo.toml  Dockerfile
services-rust/processor/src/: consumer.rs  dlq.rs  enricher.rs  lib.rs  main.rs  offset_store.rs  pricing.rs  writer.rs
services-rust/processor/tests/: integration_test.rs
(+90 files in other folders)
