[workspace]
resolver = "2"
members = [
    "common",
    "ingest",
    "processor",
]

[workspace.dependencies]
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rskafka         = "0.5"
clickhouse      = "0.12"
sqlx            = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
redis           = { version = "0.26", features = ["tokio-comp"] }
thiserror       = "2"
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http      = { version = "0.6", features = ["trace", "timeout"] }
uuid            = { version = "1", features = ["v4"] }
sha2            = "0.10"
hex             = "0.4"
