[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopecall-py"
version = "0.2.0"
description = "Open-source, self-hostable AI observability — scope every LLM call in production"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ScopeCall", email = "founders@scopecall.com" }]
keywords = ["ai", "observability", "llm", "openai", "anthropic", "tracing", "cost", "scopecall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

# Core dependencies. Deliberately small — the SDK must not pull in ML
# frameworks transitively. httpx replaces requests because we need async
# support for AsyncOpenAI / AsyncAnthropic in chunk 2.
dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Provider SDKs are optional — users install only what they need.
# Lower-bound pinning so the SDK doesn't break when openai-py bumps a
# minor version. Top-level instrumentation lives in
# scopecall.instrumentation.{openai,anthropic} (chunk 2).
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://scopecall.com"
Repository = "https://github.com/scopecall/scopecall"
Documentation = "https://docs.scopecall.com"
Issues = "https://github.com/scopecall/scopecall/issues"

[tool.hatch.build.targets.wheel]
packages = ["scopecall"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
